# speedy-antlr-tool

./: .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
docs/: conf.py  example.rst  index.rst  requirements.txt
example/: .gitignore  MyGrammar.g4  generate_speedy_files.py  runme.sh
speedy_antlr_tool/: __init__.py  extractor.py  main.py  objects.py  validate.py
speedy_antlr_tool/templates/: sa_X.pyt  sa_X_cpp_parser.cpp  sa_X_parser.cpp  sa_X_translator.cpp  sa_X_translator.h  speedy_antlr.cpp  speedy_antlr.h
